[gd_scene load_steps=40 format=3 uid="uid://81h4f2tmbwfp"]

[ext_resource type="Script" path="res://Autoloads/AudioManager.gd" id="1_n0fra"]
[ext_resource type="AudioStream" uid="uid://bayjgoyippie8" path="res://Galactic Arithmetic Assets/Audio_Assets/BG_Music_Main_Menu.wav" id="2_l0pdd"]
[ext_resource type="AudioStream" uid="uid://b37c7a36kli65" path="res://Galactic Arithmetic Assets/Audio_Assets/Button Click.mp3" id="3_aeqlm"]
[ext_resource type="AudioStream" uid="uid://b3l3dmx1kikie" path="res://Galactic Arithmetic Assets/Audio_Assets/Level 1 - Grass.wav" id="4_1id1u"]
[ext_resource type="AudioStream" uid="uid://l3dtd1eiau8w" path="res://Galactic Arithmetic Assets/Audio_Assets/Level_2_Water_1.wav" id="4_a3lgr"]
[ext_resource type="AudioStream" uid="uid://daojw2icffwmd" path="res://Galactic Arithmetic Assets/Audio_Assets/World_3_-_Lava.mp3" id="5_8eqsm"]
[ext_resource type="AudioStream" uid="uid://b3ivhtebesg6l" path="res://Galactic Arithmetic Assets/Audio_Assets/Death sound.mp3" id="5_crlbh"]
[ext_resource type="AudioStream" uid="uid://bmcmyea614roy" path="res://Galactic Arithmetic Assets/Audio_Assets/SlimeWalk.mp3" id="6_5l0s8"]
[ext_resource type="AudioStream" uid="uid://7w6wu2qducod" path="res://Galactic Arithmetic Assets/Audio_Assets/Item Collect.mp3" id="7_cj0vk"]
[ext_resource type="AudioStream" uid="uid://d0ql4gyx76r87" path="res://Galactic Arithmetic Assets/Audio_Assets/button_collect.mp3" id="8_y41oi"]
[ext_resource type="AudioStream" uid="uid://t1yki7j3xxv8" path="res://Galactic Arithmetic Assets/Audio_Assets/level_complete_sfx.wav" id="9_27e31"]
[ext_resource type="AudioStream" uid="uid://du1bqh1bfa85j" path="res://Galactic Arithmetic Assets/Audio_Assets/slime_hurt.mp3" id="10_fe16u"]
[ext_resource type="AudioStream" uid="uid://ddu3jvnqbl4jw" path="res://Galactic Arithmetic Assets/Audio_Assets/Octopus_shot.mp3" id="11_tkjrb"]
[ext_resource type="AudioStream" uid="uid://c30xwwrqe1v0g" path="res://Galactic Arithmetic Assets/Audio_Assets/Warp_teleport.mp3" id="12_hq4iy"]
[ext_resource type="AudioStream" uid="uid://vala12sghwur" path="res://Galactic Arithmetic Assets/Audio_Assets/tutorial mp3/1st.mp3" id="13_6eser"]
[ext_resource type="AudioStream" uid="uid://bgeyh0wf7hlm8" path="res://Galactic Arithmetic Assets/Audio_Assets/tutorial mp3/2nd.mp3" id="14_vppl7"]
[ext_resource type="AudioStream" uid="uid://c1buupaeqpmnk" path="res://Galactic Arithmetic Assets/Audio_Assets/tutorial mp3/3rd.mp3" id="15_nflfr"]
[ext_resource type="AudioStream" uid="uid://cgf7rknjnfih1" path="res://Galactic Arithmetic Assets/Audio_Assets/tutorial mp3/4th.mp3" id="16_bhitp"]
[ext_resource type="AudioStream" uid="uid://j33rnqwb6256" path="res://Galactic Arithmetic Assets/Audio_Assets/tutorial mp3/5TH.mp3" id="17_4s04k"]
[ext_resource type="AudioStream" uid="uid://b7uxx3a1md2kx" path="res://Galactic Arithmetic Assets/Audio_Assets/tutorial mp3/1basics.mp3" id="18_gpink"]
[ext_resource type="AudioStream" uid="uid://uq1tc21egbk4" path="res://Galactic Arithmetic Assets/Audio_Assets/tutorial mp3/5th-1.mp3" id="19_x3lbo"]
[ext_resource type="AudioStream" uid="uid://cn0qrp21tofvp" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/1.mp3" id="22_f2l13"]
[ext_resource type="AudioStream" uid="uid://bw8udc4ft13ck" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/2.mp3" id="23_f0tey"]
[ext_resource type="AudioStream" uid="uid://dx7n85aehs0xt" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/3.mp3" id="24_8jsf4"]
[ext_resource type="AudioStream" uid="uid://nwhi1rtagmik" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/4.mp3" id="25_dhd2l"]
[ext_resource type="AudioStream" uid="uid://dgwjx2rdsqeho" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/5.mp3" id="26_mvt0f"]
[ext_resource type="AudioStream" uid="uid://x2gqksk5kjwc" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/9.mp3" id="30_21ly5"]
[ext_resource type="AudioStream" uid="uid://co3v5uwjds866" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/12.mp3" id="31_4pibt"]
[ext_resource type="AudioStream" uid="uid://elbfhwlq1tj4" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/10.mp3" id="31_56ic5"]
[ext_resource type="AudioStream" uid="uid://d27hrpyyv4g6n" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/6.mp3" id="31_g5k51"]
[ext_resource type="AudioStream" uid="uid://lmgegskmxndu" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/7.mp3" id="32_0g1on"]
[ext_resource type="AudioStream" uid="uid://cw6w5axjfv10y" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/13.mp3" id="32_4fduk"]
[ext_resource type="AudioStream" uid="uid://qvo2qshtv1jr" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/8.mp3" id="33_avhr7"]
[ext_resource type="AudioStream" uid="uid://d2ina1cma0r1w" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/14.mp3" id="33_oon6m"]
[ext_resource type="AudioStream" uid="uid://03fufki76ic3" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/15.mp3" id="34_72sob"]
[ext_resource type="AudioStream" uid="uid://bmv8j4axrr3jp" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/11.mp3" id="34_owpg0"]
[ext_resource type="AudioStream" uid="uid://d1bn0uvgab8o5" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/16.mp3" id="35_stc1c"]
[ext_resource type="AudioStream" uid="uid://htqdux7e8r5e" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/17.mp3" id="36_apcnj"]
[ext_resource type="AudioStream" uid="uid://dbx6l5t58ughw" path="res://Galactic Arithmetic Assets/Audio_Assets/storyboard mp3/18.mp3" id="39_2u0a8"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_n0fra")

[node name="BG_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_l0pdd")
bus = &"music"

[node name="Level1_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1id1u")
bus = &"music"

[node name="Level2_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_a3lgr")
bus = &"music"

[node name="Level3_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8eqsm")
bus = &"music"

[node name="Level4_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1id1u")
bus = &"music"

[node name="Level5_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1id1u")
bus = &"music"

[node name="Button_SFX" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3_aeqlm")
bus = &"sfx"

[node name="death_sfx" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("5_crlbh")
bus = &"sfx"

[node name="slime_walk" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("6_5l0s8")
volume_db = -15.0
pitch_scale = 0.8
bus = &"sfx"

[node name="item_collect" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("7_cj0vk")
bus = &"sfx"

[node name="operator_collect" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("8_y41oi")
bus = &"sfx"

[node name="level_complete_sfx" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("9_27e31")
bus = &"sfx"

[node name="slime_hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_fe16u")

[node name="octopus_shot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_tkjrb")

[node name="teleport" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_hq4iy")

[node name="1st_tutorial" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_6eser")

[node name="2nd_tutorial" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_vppl7")

[node name="3rd_tutorial" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_nflfr")

[node name="4th_tutorial" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_bhitp")

[node name="5th_tutorial" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_4s04k")

[node name="6th_tutorial" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_gpink")

[node name="7th_tutorial" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_x3lbo")

[node name="story1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_f2l13")

[node name="story2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_f0tey")

[node name="story3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_8jsf4")

[node name="story4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_dhd2l")

[node name="story5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_mvt0f")

[node name="story6" type="AudioStreamPlayer" parent="."]
stream = ExtResource("31_g5k51")

[node name="story7" type="AudioStreamPlayer" parent="."]
stream = ExtResource("32_0g1on")

[node name="story8" type="AudioStreamPlayer" parent="."]
stream = ExtResource("33_avhr7")

[node name="story9" type="AudioStreamPlayer" parent="."]
stream = ExtResource("30_21ly5")

[node name="story10" type="AudioStreamPlayer" parent="."]
stream = ExtResource("31_56ic5")

[node name="story11" type="AudioStreamPlayer" parent="."]
stream = ExtResource("34_owpg0")

[node name="story12" type="AudioStreamPlayer" parent="."]
stream = ExtResource("31_4pibt")

[node name="story13" type="AudioStreamPlayer" parent="."]
stream = ExtResource("32_4fduk")

[node name="story14" type="AudioStreamPlayer" parent="."]
stream = ExtResource("33_oon6m")

[node name="story15" type="AudioStreamPlayer" parent="."]
stream = ExtResource("34_72sob")

[node name="story16" type="AudioStreamPlayer" parent="."]
stream = ExtResource("35_stc1c")

[node name="story17" type="AudioStreamPlayer" parent="."]
stream = ExtResource("36_apcnj")

[node name="story18" type="AudioStreamPlayer" parent="."]
stream = ExtResource("39_2u0a8")
